force-app/main/default/objects/Account/fields/Domestic_Annual_Share__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Annual_Share__c</fullName>
    <description>Used in Executive Summary, Target Domestic Share</description>
    <label>Forecast QF Share (Dom) [System]</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>