force-app/main/default/objects/Account/fields/Domestic_Market_Share__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Market_Share__c</fullName>
    <label>Domestic Market Share</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>