force-app/main/default/objects/Account/fields/Domestic_Share_Actual_pts__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Share_Actual_pts__c</fullName>
    <description>The field is created to capture the Domestic Share Actual for the agency accounts. JIRA#2142</description>
    <formula>100*(QF_Agency_Domestic_Market_Share__c-Domestic_Share_LY__c)</formula>
    <label>Domestic Share Actual (pts)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>