force-app/main/default/objects/Account/fields/Domestic_Share_LY__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Share_LY__c</fullName>
    <description>The field is created to capture the Domestic Revenue Target for the agency accounts. JIRA#2142</description>
    <label>Domestic Share LY</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>