force-app/main/default/objects/Account/fields/DUNS_Number__c.field-meta.xml
<CustomField>
    <fullName>DUNS_Number__c</fullName>
    <description>Check for reusability of any unused standard field</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Dunn and Bradstreet No.</inlineHelpText>
    <label>DUNS #</label>
    <length>15</length>
    <type>Text</type>
</CustomField>