force-app/main/default/objects/Account/fields/E_Ticket__c.field-meta.xml
<CustomField>
    <fullName>E_Ticket__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>To mark if an IATA agent has the option to book e-tickets</inlineHelpText>
    <label>E-Ticket</label>
    <type>Checkbox</type>
</CustomField>