force-app/main/default/objects/Account/fields/EK_Domestic_Revenue__c.field-meta.xml
<CustomField>
    <fullName>EK_Domestic_Revenue__c</fullName>
    <label>EK Domestic Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>