force-app/main/default/objects/Account/fields/EK_International_Revenue__c.field-meta.xml
<CustomField>
    <fullName>EK_International_Revenue__c</fullName>
    <label>EK International Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>