force-app/main/default/objects/Account/fields/EK_Revenue_LY__c.field-meta.xml
<CustomField>
    <fullName>EK_Revenue_LY__c</fullName>
    <label>EK Revenue (LY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>