force-app/main/default/objects/Account/fields/Eligible_for_SME_Campaigns__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_SME_Campaigns__c</fullName>
    <label>Eligible for SME Campaigns</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>