force-app/main/default/objects/Account/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Generic Company Email</inlineHelpText>
    <label>Account Email</label>
    <type>Email</type>
</CustomField>