force-app/main/default/objects/Account/fields/Employees_Travelling_Frequently__c.field-meta.xml
<CustomField>
    <fullName>Employees_Travelling_Frequently__c</fullName>
    <description>To store the incoming information from Acquire</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Employees Travelling Frequently</label>
    <length>5</length>
    <type>Text</type>
</CustomField>