force-app/main/default/objects/Account/fields/Enrolment_Date__c.field-meta.xml
<CustomField>
    <fullName>Enrolment_Date__c</fullName>
    <description>To store the incoming information from Acquire</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Enrolment Date</label>
    <type>Date</type>
</CustomField>