force-app/main/default/objects/Account/fields/Estimated_International_Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Estimated_International_Annual_Revenue__c</fullName>
    <description>To store the incoming information from Acquire</description>
    <label>Estimated International Annual Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>