force-app/main/default/objects/Account/fields/Estimated_MCA_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Estimated_MCA_Revenue__c</fullName>
    <inlineHelpText>Including EK spend if joint customer</inlineHelpText>
    <label>Estimated MCA Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>