force-app/main/default/objects/Account/fields/Estimated_QF_Dom_Market_Share__c.field-meta.xml
<CustomField>
    <fullName>Estimated_QF_Dom_Market_Share__c</fullName>
    <inlineHelpText>To be captured by the Account Manager/Team if there are no actuals or if estimated is different from actuals</inlineHelpText>
    <label>Estimated QF Dom Market Share</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>