force-app/main/default/objects/Account/fields/Estimated_Total_Account_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Total_Account_Revenue__c</fullName>
    <description>Shows the estimated revenue of the account (100%*Account Revenue)/Current Market Share = Estimated Total Account Revenue</description>
    <formula>IF(Current_Market_Share__c != null,(QF_Revenue__c *1)/ Current_Market_Share__c,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Account Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>