force-app/main/default/objects/Account/fields/Estimated_Total_Air_Travel_Spend__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Total_Air_Travel_Spend__c</fullName>
    <inlineHelpText>Used to capture the total estimated air travel spend (AUD) of the account - this field is either populated via Aquire/QBD product registration or is to be manually captured/updated by the Account Manager/Team. This is used to drive the account assignment.</inlineHelpText>
    <label>Estimated Total Air Travel Spend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>