force-app/main/default/objects/Account/fields/Estimated_Total_QF_Int_Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Total_QF_Int_Annual_Revenue__c</fullName>
    <inlineHelpText>To be captured by the Account Manager/Team if there are no actuals or if estimated is different from actuals</inlineHelpText>
    <label>Estimated QF Int Annual Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>