force-app/main/default/objects/Account/fields/Exchange_Code__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Exchange Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>