force-app/main/default/objects/Account/fields/Fax_Area__c.field-meta.xml
<CustomField>
    <fullName>Fax_Area__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fax Area Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>