force-app/main/default/objects/Account/fields/Fax_Country__c.field-meta.xml
<CustomField>
    <fullName>Fax_Country__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fax Country Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>