force-app/main/default/objects/Account/fields/Fax_Number__c.field-meta.xml
<CustomField>
    <fullName>Fax_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fax Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>