force-app/main/default/objects/Account/fields/Forecast_Group_Booking_Expenditure__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Group_Booking_Expenditure__c</fullName>
    <label>Forecast Group Booking Expenditure</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>