force-app/main/default/objects/Account/fields/Form_of_Payment__c.field-meta.xml
<CustomField>
    <fullName>Form_of_Payment__c</fullName>
    <description>Stores form of payment for Corporate Account</description>
    <label>Form of Payment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>AX/QF Corporate Card</fullName>
            </value>
            <value>
                <fullName>Amex Business Travel Account</fullName>
            </value>
            <value>
                <fullName>Amex Corporate Card</fullName>
            </value>
            <value>
                <fullName>Bankcard</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Diners Club</fullName>
            </value>
            <value>
                <fullName>Mastercard</fullName>
            </value>
            <value>
                <fullName>Visa Card</fullName>
            </value>
            <value>
                <fullName>Organised through Head Office</fullName>
            </value>
            <value>
                <fullName>Other Airline Account</fullName>
            </value>
            <value>
                <fullName>QF Charge Card</fullName>
            </value>
            <value>
                <fullName>Travel Agent Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>