force-app/main/default/objects/Account/fields/Freight_Agent_Type__c.field-meta.xml
<CustomField>
    <fullName>Freight_Agent_Type__c</fullName>
    <description>Freight - To capture whether the customer is an IATA or Non-IATA Agent for iCargo/Scorpio</description>
    <inlineHelpText>IATA or Non-IATA agent</inlineHelpText>
    <label>Agent Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IATA Agent</fullName>
            </value>
            <value>
                <fullName>Non-IATA Agent</fullName>
            </value>
            <value>
                <fullName>GSA Agent (Route)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>