force-app/main/default/objects/Account/fields/Freight_Billing_Period__c.field-meta.xml
<CustomField>
    <fullName>Freight_Billing_Period__c</fullName>
    <description>Freight - To record how often the customer gets billed in iCargo/Scorpio</description>
    <label>Billing Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Fortnightly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>