force-app/main/default/objects/Account/fields/Freight_Cargo_Volumes__c.field-meta.xml
<CustomField>
    <fullName>Freight_Cargo_Volumes__c</fullName>
    <description>Freight Implemetation:</description>
    <inlineHelpText>The annual cargo shipped by the company (optional)</inlineHelpText>
    <label>Cargo (in Tonnes)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>