force-app/main/default/objects/Account/fields/Freight_CAS__c.field-meta.xml
<CustomField>
    <fullName>Freight_CAS__c</fullName>
    <description>Freight Implementation: CAS Number Storage</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>4 digit number provided by IATA Cargo Account Settlement System. The CASS number is the last four digits of the 11 digit  IATA code</inlineHelpText>
    <label>CASS</label>
    <length>4</length>
    <type>Text</type>
</CustomField>