force-app/main/default/objects/Account/fields/Freight_Controlling_Location__c.field-meta.xml
<CustomField>
    <fullName>Freight_Controlling_Location__c</fullName>
    <description>Freight - Capture the controlling location for International Freight Accounts</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Freight (optional): ‘Approver’ in iCargo &amp; Controlling location in Scorpio. It is required for AWB stock allocation</inlineHelpText>
    <label>Controlling Location/Approver</label>
    <length>255</length>
    <type>Text</type>
</CustomField>