force-app/main/default/objects/Account/fields/Freight_Customer_Code__c.field-meta.xml
<CustomField>
    <fullName>Freight_Customer_Code__c</fullName>
    <description>Freight Implementation: Customer is the attribute from iCargo system. Account are uniquely identified in this system.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Unique code which identifies the customer account in iCargo system. Please enter Location # for DOM and IATA# for INT.</inlineHelpText>
    <label>Customer Code</label>
    <length>11</length>
    <type>Text</type>
</CustomField>