force-app/main/default/objects/Account/fields/Freight_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Freight_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Freight Email Sent</label>
    <type>Checkbox</type>
</CustomField>