force-app/main/default/objects/Account/fields/Freight_eQ_Reference__c.field-meta.xml
<CustomField>
    <fullName>Freight_eQ_Reference__c</fullName>
    <description>Freight Implementation: Unique values form eQ system will be stored in this attribute.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Customer Account number in Oracle eQ used for invoicing</inlineHelpText>
    <label>Customer #</label>
    <length>25</length>
    <type>Text</type>
</CustomField>