force-app/main/default/objects/Account/fields/Freight_Location__c.field-meta.xml
<CustomField>
    <fullName>Freight_Location__c</fullName>
    <description>Freight - the Location # received from the credit check team will be stored here</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Used as Customer Code in iCargo system for non-IATA customers</inlineHelpText>
    <label>Location #</label>
    <length>10</length>
    <type>Text</type>
</CustomField>