force-app/main/default/objects/Account/fields/Freight_Unique_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Freight_Unique_Identifier__c</fullName>
    <description>Freight Implementation: It will be combination of FCI, Country Code, Customer Code.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Unique code which identifies the customer account in Salesforce (e.g. DGF-AU)</inlineHelpText>
    <label>Freight Unique Identifier</label>
    <length>100</length>
    <type>Text</type>
</CustomField>