force-app/main/default/objects/Account/fields/Future_Planet__c.field-meta.xml
<CustomField>
    <fullName>Future_Planet__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Shows whether the Account is associated to Future Planet</description>
    <inlineHelpText>Account is/was part of the Future Planet corporate carbon offset program</inlineHelpText>
    <label>Future Planet</label>
    <type>Checkbox</type>
</CustomField>