force-app/main/default/objects/Account/fields/GMC_Accounts__c.field-meta.xml
<CustomField>
    <fullName>GMC_Accounts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to flag whether the Account is an GMC Account. Also used in GMC Activities Reporting. Used to identify the Accounts owned by Government Affairs and to restrict the visibility to other Roles</description>
    <label>GA Accounts</label>
    <type>Checkbox</type>
</CustomField>