force-app/main/default/objects/Account/fields/Group_Travel_Discount__c.field-meta.xml
<CustomField>
    <fullName>Group_Travel_Discount__c</fullName>
    <label>Group Travel Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>