force-app/main/default/objects/Account/fields/GST_Registered__c.field-meta.xml
<CustomField>
    <fullName>GST_Registered__c</fullName>
    <label>GST Registered</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
                <color>#009900</color>
                <label>Y</label>
            </value>
            <value>
                <fullName>N</fullName>
                <color>#FF0000</color>
                <label>N</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>