force-app/main/default/objects/Account/fields/IATA_BSP_Level__c.field-meta.xml
<CustomField>
    <fullName>IATA_BSP_Level__c</fullName>
    <inlineHelpText>Go Global – this is for the likes of American Express who have offices globally
Go Standard – your individually owned agencies such as The Travel Authority
Go Light – smaller agencies who have must prepay onto the BSP account prior to issuing tickets</inlineHelpText>
    <label>IATA BSP Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Go Global</fullName>
            </value>
            <value>
                <fullName>Go Standard</fullName>
            </value>
            <value>
                <fullName>Go Light</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>