force-app/main/default/objects/Account/fields/IATA_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>IATA_Expiry_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IATA Expiry Date</label>
    <type>Date</type>
</CustomField>