force-app/main/default/objects/Account/fields/IATA_Number__c.field-meta.xml
<CustomField>
    <fullName>IATA_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IATA #</label>
    <length>10</length>
    <type>Text</type>
</CustomField>