force-app/main/default/objects/Account/fields/IATACheckDigit__c.field-meta.xml
<CustomField>
    <fullName>IATACheckDigit__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IATA Check Digit</label>
    <length>8</length>
    <type>Text</type>
</CustomField>