force-app/main/default/objects/Account/fields/Important__c.field-meta.xml
<CustomField>
    <fullName>Important__c</fullName>
    <defaultValue>&quot;The System Admin Request case for new account creation is now automated. There is no need to raise a case for new account creations.&quot;</defaultValue>
    <description>Read only text to let users know that there is no need to create a system admin request case for new account creation.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Important</label>
    <length>255</length>
    <type>Text</type>
</CustomField>