force-app/main/default/objects/Account/fields/In_Risk__c.field-meta.xml
<CustomField>
    <fullName>In_Risk__c</fullName>
    <formula>Risk_Count__c &gt; 0</formula>
    <label>At Risk</label>
    <type>Checkbox</type>
</CustomField>