force-app/main/default/objects/Account/fields/Independent_Sales_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Independent_Sales_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Independent Sales Agreement</label>
    <type>Checkbox</type>
</CustomField>