force-app/main/default/objects/Account/fields/Industry_Agent_TIDS_Number__c.field-meta.xml
<CustomField>
    <fullName>Industry_Agent_TIDS_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Industry Agent TIDS Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>