force-app/main/default/objects/Account/fields/Industry_flag_e_ticker__c.field-meta.xml
<CustomField>
    <fullName>Industry_flag_e_ticker__c</fullName>
    <defaultValue>false</defaultValue>
    <description>delete this</description>
    <inlineHelpText>To mark if an IATA agent has the option to book e-tickets</inlineHelpText>
    <label>E-Ticket</label>
    <type>Checkbox</type>
</CustomField>