force-app/main/default/objects/Account/fields/International_Annual_Share__c.field-meta.xml
<CustomField>
    <fullName>International_Annual_Share__c</fullName>
    <description>Used in Executive Summary, Target International Share</description>
    <label>Forecast QF Share (Int) [System]</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>