force-app/main/default/objects/Account/fields/International_MCA_Air_Travel_Spend__c.field-meta.xml
<CustomField>
    <fullName>International_MCA_Air_Travel_Spend__c</fullName>
    <label>International MCA Air Travel Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>