force-app/main/default/objects/Account/fields/International_QMR_Revenue__c.field-meta.xml
<CustomField>
    <fullName>International_QMR_Revenue__c</fullName>
    <label>International QMR Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>