force-app/main/default/objects/Account/fields/International_Share_Actual_pts__c.field-meta.xml
<CustomField>
    <fullName>International_Share_Actual_pts__c</fullName>
    <description>The field is created to capture the International Share Actual for the agency accounts. JIRA#2142</description>
    <formula>100*(QF_Agency_International_Market_Share__c-International_Share_LY__c)</formula>
    <label>International Share Actual (pts)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>