force-app/main/default/objects/Account/fields/Intl_Incremental__c.field-meta.xml
<CustomField>
    <fullName>Intl_Incremental__c</fullName>
    <description>For Internal reporting of QIS Only. It uses the MS targets on publicis end.</description>
    <formula>IF (QF_International_Market_Share__c!= 0,(((QF_International_Revenue__c/ QF_International_Market_Share__c)*0.01*65)-QF_International_Revenue__c),null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intl Incremental</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>