force-app/main/default/objects/Account/fields/Intl_Non_MCA_Air_Travel_Spend_LY__c.field-meta.xml
<CustomField>
    <fullName>Intl_Non_MCA_Air_Travel_Spend_LY__c</fullName>
    <formula>International_Air_Travel_Spend_LY__c  -  International_MCA_Air_Travel_Spend_LY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intl Non-MCA Air Travel Spend (LY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>