force-app/main/default/objects/Account/fields/Intl_Non_MCA_QF_Market_Share_TY__c.field-meta.xml
<CustomField>
    <fullName>Intl_Non_MCA_QF_Market_Share_TY__c</fullName>
    <formula>IF( Intl_Non_MCA_Air_Travel_Spend_TY__c !=0, Intl_Non_MCA_QF_Revenue_TY__c /Intl_Non_MCA_Air_Travel_Spend_TY__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intl Non-MCA QF Market Share (TY)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>