force-app/main/default/objects/Account/fields/Intl_QF_EK_Revenue_LY__c.field-meta.xml
<CustomField>
    <fullName>Intl_QF_EK_Revenue_LY__c</fullName>
    <formula>EK_International_Revenue_LY__c   +  QF_International_Revenue_LY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intl QF/EK Revenue (LY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>