force-app/main/default/objects/Account/fields/Intl_Revenue_Target_65__c.field-meta.xml
<CustomField>
    <fullName>Intl_Revenue_Target_65__c</fullName>
    <description>For QIS internal reporting only</description>
    <formula>IF (QF_International_Market_Share__c!= 0,((QF_International_Revenue__c/ QF_International_Market_Share__c)*0.01*65),null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intl Revenue Target (65%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>