force-app/main/default/objects/Account/fields/Is_Supplier_of_the_Store__c.field-meta.xml
<CustomField>
    <fullName>Is_Supplier_of_the_Store__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Loyalty commercial field which is used by Store manager</description>
    <label>Is Supplier of the Store</label>
    <type>Checkbox</type>
</CustomField>