force-app/main/default/objects/Account/fields/JB_ID__c.field-meta.xml
<CustomField>
    <fullName>JB_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>JB ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>