force-app/main/default/objects/Account/fields/Joint_AA_Customer__c.field-meta.xml
<CustomField>
    <fullName>Joint_AA_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Joint AA Customer</label>
    <type>Checkbox</type>
</CustomField>