force-app/main/default/objects/Account/fields/Joint_EK_Customer__c.field-meta.xml
<CustomField>
    <fullName>Joint_EK_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Joint EK Customer</label>
    <type>Checkbox</type>
</CustomField>