force-app/main/default/objects/Account/fields/key_Contact_Office_ID__c.field-meta.xml
<CustomField>
    <fullName>key_Contact_Office_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>key Contact Office ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>