force-app/main/default/objects/Account/fields/Key_Facts__c.field-meta.xml
<CustomField>
    <fullName>Key_Facts__c</fullName>
    <description>Deal on Page Key Facts</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Key information around this account for Loyalty</inlineHelpText>
    <label>Key Facts</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>