force-app/main/default/objects/Account/fields/Last_Activity_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_Created_Date__c</fullName>
    <description>This is used to populate the Last Activity Created Date. Used by Process Builder</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Activity Created Date</label>
    <type>Date</type>
</CustomField>