force-app/main/default/objects/Account/fields/Last_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_Date__c</fullName>
    <description>By Activity Due Date/ Event Start Date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Activity Date</label>
    <type>Date</type>
</CustomField>