force-app/main/default/objects/Account/fields/Last_Completed_Account_Review__c.field-meta.xml
<CustomField>
    <fullName>Last_Completed_Account_Review__c</fullName>
    <description>This is populated from the most recent Completed Account Review Due Date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Completed Account Review</label>
    <type>DateTime</type>
</CustomField>