force-app/main/default/objects/Account/fields/Latest_Period_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Period_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date when the revenue and share figures were last updated</inlineHelpText>
    <label>Latest Period Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>