force-app/main/default/objects/Account/fields/Lead_Country__c.field-meta.xml
<CustomField>
    <fullName>Lead_Country__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Lead Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>